# trtti

./: meson.build
src/: allocator.h  json.c  json.h  json.schema.variants.def.json  json.variants.def.json  meson.build  tjson.c  tjson.h  tjson_schema.c  tjson_schema.h  trtti.c  trtti.h  trtti.ld  utils.h
src/_impl/: path.c  path.h  ref_count.h  simple_regex.c  simple_regex.h  utf8.c  utf8.h  utils.h
src/_impl/allocators/: meson.build  tjson_coverage_allocators.c  tjson_coverage_allocators.h
src/helper/: path.c  path.h  utf8.h
src/tjson/: bootstrap_variants.h  variants.h
